removed test borders from header added image under header

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
      
   <div class="container home">
    
+    <img src="img/fun-bus.jpg" alt="Toy bus on sand">
+
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
