changed header to top-nav

--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
 </head>
 
 <body>
-  <header class="header">
-    <div class="head-flex">
-
+  <header class="top-nav">
+    <div class="nav-flex">
       <h1>Fun Bus</h1>
-      
+    
       <nav>
         <a href="#">Home</a>
         <a href="#">About Us</a>
